syntax = "proto3";
package ddkrpc;

service DdkRpc {
  rpc Info (InfoRequest) returns (InfoResponse);
  rpc SendOffer (SendOfferRequest) returns (SendOfferResponse);
  rpc AcceptOffer (AcceptOfferRequest) returns (AcceptOfferResponse);
  rpc ListOffers (ListOffersRequest) returns (ListOffersResponse);
  rpc NewAddress (NewAddressRequest) returns (NewAddressResponse);
}

message InfoRequest {}

message InfoResponse {
  string pubkey = 1;
  string transport = 2;
  string oracle = 3;
}

message SendOfferRequest {
  bytes contract_input = 1;
  string counter_party = 2;
}

message SendOfferResponse {
  bytes offer_dlc = 1;
}

message ListOffersRequest {}

message ListOffersResponse {
  repeated bytes offers = 1;
}

message AcceptOfferRequest {
  string contract_id = 1;
}

message AcceptOfferResponse {
  string node_id = 1;
  bytes accept_msg = 2;
}

message NewAddressRequest {}

message NewAddressResponse {
  string address = 1;
}
